--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -7,12 +7,48 @@ html {
 *:before,
 *:after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  padding: 20px;
-  background-color: $ltGray;
-  color: $black;
-  font-family: 'Roboto', sans-serif;
+  background-color: $white;
+  font-family: "Roboto", sans-serif;
   line-height: 1.3;
+
+  &.hide-scrollbar {
+    overflow: hidden;
+  }
+}
+
+.content {
+  padding: 40px;
+  transition: padding 150ms linear;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.gallery-body {
+  padding-top: 200px;
+  transition: padding-top 150ms linear;
+  background: rgb(38, 155, 201);
+
+  footer {
+    img {
+      background-color: #269bc9 !important;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .content {
+    padding: 20px;
+    transition: padding 150ms linear;
+  }
+
+  .gallery-body {
+    padding-top: 60px;
+    transition: padding-top 150ms linear;
+  }
 }
