--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,3 +2,12 @@
 @import "colors";
 @import "global";
 @import "typography";
+@import "nav";
+@import "slider";
+@import "activities";
+@import "divider";
+@import "education";
+@import "branch";
+@import "gallery";
+@import "parents";
+@import "footer";
