--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -22,7 +22,7 @@ body {
 }
 
 .content {
-  padding: 40px;
+  padding: 60px 40px;
   transition: padding 150ms linear;
   display: flex;
   flex-direction: column;
