--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,4 +11,9 @@
 @import "gallery";
 @import "parents";
 @import "contact";
+@import "announcement";
+@import "nutrition";
+@import "whoAreWe";
+@import "whatAreWeDoing";
+@import "classes";
 @import "footer";
