--- a/app/scss/contact.scss
+++ b/app/scss/contact.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: fit-content;
+  width: 1000px;
   align-self: center;
 
   .contact-wrapper {
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: space-around;
     padding: 20px;
+    transition: all 150ms linear;
 
     .contact-form {
       max-width: 300px;
@@ -25,6 +26,10 @@
         padding: 20px;
         display: flex;
         flex-direction: column;
+
+        label {
+          color: $headline;
+        }
 
         input {
           padding: 10px 15px;
@@ -38,6 +43,7 @@
           resize: none;
           padding: 10px 15px;
           height: 183px;
+          transition: all 150ms linear;
           border-radius: 20px;
           outline: none;
           border: none;
@@ -65,6 +71,19 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+        transition: all 150ms linear;
+
+        &:hover {
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+          transition: all 150ms linear;
+        }
+
+        .contact-info-headline {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          color: $headline;
+        }
       }
     }
   }
@@ -72,6 +91,7 @@
 
 @media (max-width: 1000px) {
   .contact {
+    width: fit-content;
     .contact-wrapper {
       flex-direction: column;
       justify-content: center;
@@ -104,6 +124,16 @@
 @media (max-width: 650px) {
   .contact {
     .contact-wrapper {
+      padding: 0;
+      transition: all 150ms linear;
+      .contact-form {
+        .form-label {
+          textarea {
+            height: 70px;
+            transition: all 150ms linear;
+          }
+        }
+      }
       .contact-info-wrapper {
         grid-template-columns: repeat(1, 1fr);
       }
