--- a/app/scss/parents.scss
+++ b/app/scss/parents.scss
@@ -27,6 +27,12 @@
       gap: 20px;
       padding: 20px;
       border-radius: 15px;
+      transition: all 150ms linear;
+
+      &:hover {
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        transition: all 150ms linear;
+      }
 
       .board-logo {
         display: flex;
