--- a/app/scss/classes.scss
+++ b/app/scss/classes.scss
@@ -11,6 +11,7 @@
     background-color: $navLinkHover;
     color: $white;
     border-radius: 15px;
+    text-align: center;
   }
 
   .classes-wrapper {
