--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -5,6 +5,7 @@ $ltGray: #cecece;
 $menuOverlay: #82a6f7;
 $primaryColor: #97d3ba;
 $navLink: #fdd803;
+$navLinkDark: #e7d60f;
 $navLinkHover: #f36d4b;
 $headline: #7256a4;
 $boardBg: #eeebf5;
