--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -41,9 +41,9 @@ body {
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1300px) {
   .content {
-    padding: 20px;
+    padding: 60px 20px;
     transition: padding 150ms linear;
   }
 
