--- a/app/scss/classes.scss
+++ b/app/scss/classes.scss
@@ -16,7 +16,7 @@
 
   .classes-wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 30px;
     transition: gap 150ms linear;
 
@@ -45,6 +45,11 @@
           padding: 5px;
           border-radius: 10px;
           color: $white;
+        }
+
+        img {
+          height: 120px;
+          width: 120px;
         }
       }
 
