--- a/app/scss/slider.scss
+++ b/app/scss/slider.scss
@@ -6,7 +6,8 @@
   background-color: #97d3ba;
   transition: all 150ms linear;
 
-  .kindergarten-slider {
+  .kindergarted-slider {
+
     img {
       max-height: 100%;
       width: fit-content;
@@ -19,5 +20,9 @@
   .slider {
     padding-top: 20px;
     transition: all 150ms linear;
+
+    .kindergarted-slider {
+      padding-top: 75px;
+    }
   }
 }
